task modal object displayed info in console.log

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
           </div>
 
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <button type="button" id="taskSubmit" class="btn btn-secondary" data-dismiss="modal">Add Task</button>
+            
           </div>
         </div>
       </div>
